client/src/App.css
html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: helvetica-neue,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.map-container {
  height: 100%;
  width: 75%;
  float: right;
}

#map {
  height: 100%;
}

.navbar {
  display: flex;
  align-items: center;
}

.navbar ul {
  display: flex;
  justify-content: space-evenly;
  width: 300px;
}

.navbar li {
  display: block;
}

.navbar li a {
  font-weight: 700;
  font-size: 1rem;
  text-decoration: none;
  color: white;
}

.title {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.record-col {
  float: left;
  max-height: 800px;
  overflow-y: scroll;
  width: 25%;
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.btn-orange {
  margin-top: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 34px;
  border: 2px solid #fa6204;
  font-size: 1.1rem;
  background-color: #fa6204;
  color: white;
  font-weight: 700;
}

.modal-container {
  position: relative;
}
.modal-container .modal, .modal-container .modal-backdrop {
  position: absolute;
}

.signUpText{
  margin: 10px 0px;
}

.workshop-header {
  font-size: 1.5em;
  padding-left: 25px;
  padding-bottom: 5px;
  padding-top: 15px;
  font-weight: bold;
  color: #333;
}

.workshop-container {
  max-height: 291px;
  border-bottom: 1px solid #cccccc;
  padding-bottom: 15px;
}

.workshop-col-8 {
  width: 75%;
  display: flex;
}

.workshop-col-4 {
  width: 25%;
  padding-left: 20px;
}

.workshop-details {
  display: flex;
}

.workshop-details p {
  padding-left: 15px;
  height: 100%;
}

.workshop-img {
  width: 302px;
  float: left;
  margin-left: 25px;
}

.workshop-img img {
  width: 302px;
  height: 217px;
}

.favorite-date {
  font-weight: 700;
  font-size: 18px;
}

.favorite-time {
  font-size: 18px;
}

/* searchbar styling */

.searchbar-wrapper {
  border: 1px solid #DDDBDA;
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 35px;
  width: 95%;
  border-radius: 2px;
  position: relative;
  margin: 5px auto;
}

.searchbar {
  width: 77%;
  display: flex;
}

.searchbar input {
  outline: none;
  border: none;
  width: 100%;
  font-size: 15px;
}

.footer{
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  background-color: white;
  text-align: center;
}
  
.footer:hover {
  box-shadow: 0 0 2rem gray;
}

h1 {
  font-size: 1.1rem;
}
 
.p1 {
  font-size: 1.0rem;
  color: blue;
}
.p2 {
  font-size: 0.9rem;
  color: gray;
}

.imageOne {
  width:100%;
  max-height: 400px !important;
}
.imageTwo{
  width:100%;
  max-height: 400px !important;
}
.imageThree{
  width:100%;
  max-height: 400px !important;
}

